fix(identity): keep URL encoding compatible with Android 8